<resources>
    <string name="app_name">MapMarq_draft1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="building_name">Building Name</string>
    <string name="room_number">Room Number</string>
    <string name="time_day">Time / Day</string>
    <string name="menu_buildings">Buildings</string>
    <string name="menu_classrooms">Classrooms</string>
    <string name="menu_saved_locations">Saved Locations</string>
    <string name="select_building">Select a Building</string>
    <string name="select_room">Select a Room</string>
    <string name="switch_mode">Switch mode</string>
    <string name="mode">mode</string>
    <string name="change_language">Change Language</string>
    <string name="add_location">Add Location</string>
    <string name="remove_location">Remove Location</string>
    <string name="select_remove_location">Select a Location to Remove</string>
    <string name="no_removable_locations">No locations to remove.</string>
    <string name="menu_settings">Settings</string>
    <string-array name="buildings">
        <item>Lalumiere</item>
        <item>Cudahy</item>
    </string-array>
    <string-array name="lalumiere_rooms">
        <item>108</item>
        <item>114</item>
        <item>130</item>
        <item>136</item>
        <item>140</item>
        <item>154</item>
        <item>160</item>
        <item>166</item>
        <item>172</item>
        <item>175</item>
        <item>180</item>
        <item>184</item>
        <item>186</item>
        <item>188</item>
        <item>192</item>
        <item>202</item>
        <item>204</item>
        <item>206</item>
        <item>210</item>
        <item>216</item>
        <item>222</item>
        <item>232</item>
        <item>254</item>
        <item>262</item>
        <item>272</item>
        <item>280</item>
        <item>288</item>
        <item>292</item>
    </string-array>
    <string-array name="cudahy_rooms">
        <item>101</item>
        <item>108</item>
        <item>114</item>
        <item>118</item>
        <item>120</item>
        <item>126</item>
        <item>128</item>
        <item>131</item>
        <item>137</item>
        <item>143</item>
        <item>145</item>
        <item>151</item>
    </string-array>

    <string-array name="language_codes">
        <!-- MUST match languages[] order -->
        <item>en</item>
        <item>es</item>
        <item>zh</item>
    </string-array>
</resources>
</resources>
