<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_buildings">

    <fragment
        android:id="@+id/nav_buildings"
        android:name="com.example.mapmarq_draft1.ui.buildings.BuildingsFragment"
        android:label="@string/menu_buildings"
        tools:layout="@layout/fragment_buildings" />

    <fragment
        android:id="@+id/nav_classrooms"
        android:name="com.example.mapmarq_draft1.ui.classrooms.ClassroomsFragment"
        android:label="@string/menu_classrooms"
        tools:layout="@layout/fragment_classrooms" />

    <fragment
        android:id="@+id/nav_saved_locations"
        android:name="com.example.mapmarq_draft1.ui.saved_locations.SavedLocationsFragment"
        android:label="@string/menu_saved_locations"
        tools:layout="@layout/fragment_saved_locations" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mapmarq_draft1.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>